# databases-backup-over-scp

./: .gitignore  .pre-commit-config.yaml  README.md  backup-mysql.py  backup-posgresql.py  backup-postgresql.py  backup_databases.sh  config_example.yaml  example-settings.py  example_settings.py  logger.py  main.py  main.sh  pyproject.toml  remote.py  requirements.txt  settings.py  settings_example.ini  settings_example.py
.github/workflows/: release.yml
helpers/: check_deps.sh  create_local_folder.py  create_local_folder.sh  load_config.sh  logger.py  logger.sh  paths.py  read_ini_file.sh  remote.py  remote_connect.py  remote_connect.sh  remote_copy.py  remote_copy.sh  retention.py
