[project]
name = "databases-backup-over-scp"
version = "0.5.1"
description = "Python script for remote backups of MySQL and PostgreSQL databases over SCP"
authors = [{ name = "Adrien Carpentier", email = "me@adriencarpentier.com" }]
dependencies = ["paramiko<4.0.0,>=3.0.0", "scp<1.0.0,>=0.14.1"]
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }

[tool.ruff]
line-length = 100
lint = { extend-select = ["I"] }

[tool.uv]
dev-dependencies = ["ruff>=0.6.8"]
