[project]
name = "databases-backup-over-scp"
version = "0.6.0"
description = "Python script for remote backups of MySQL and PostgreSQL databases over SCP"
authors = [{ name = "Adrien Carpentier", email = "me@adriencarpentier.com" }]
dependencies = [
    "paramiko<5.0.0,>=3.0.0",
    "scp<1.0.0,>=0.14.1",
]
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }

[tool.ruff]
line-length = 100
lint = { extend-select = ["I"] }

[dependency-groups]
dev = [
    "ruff>=0.15.1",
    "ty>=0.0.16",
]
